--- a/src/main.css
+++ b/src/main.css
@@ -30,12 +30,19 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.box-container {
+  background-color: #576471;
+  padding: 40px 20px;
+}
+
 .box {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   background-color: lightgray;
-  padding: 20px;
+  gap: 20px;
+  padding: 30px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
 .box-item {
   background-color: skyblue;
@@ -46,6 +53,7 @@ body {
   align-items: center;
   text-align: center;
   font-size: 100px;
+  border-radius: 10px;
 }
 .box i {
   font-size: 30px;
@@ -64,7 +72,7 @@ body {
   text-align: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   .box {
     flex-direction: column;
   }
